--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Joe Frixon!</h1>
+        		<h1>Hi there, </h1>
 				<p>This site is about cloud design and deployment support.<em>Azure & AWS</em> Kindly <a href="/about">Read more about my Experience...</a></p>
-    		</div><!-- /.blurb -->
+			<p>Help related to your AWS and Azure deployments send email to info@anycloud.in</p>
+		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
