--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Hi there, </h1>
 				<p>This site is about cloud design and deployment support.<em>Azure & AWS</em> Kindly <a href="/about">Read more about my Experience...</a></p>
-			<p>Help related to your AWS and Azure deployments send email to info@anycloud.in</p>
+			<p>Help related to your AWS and Azure deployments send email to <li><a href="mailto:joef@anycloud.in">info@anycloud.in</a> </li></p>
 		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
