--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, </h1>
-				<p>This site is about cloud design and deployment support.<em>Azure & AWS</em> Kindly <a href="/about">Read more about my Experience...</a></p>
-			<p>Help related to your AWS and Azure deployments send email to <a href="mailto:joef@anycloud.in">info@anycloud.in</a> </p>
+				<p>Support related to <em>Azure & AWS</em></p> infrastructure planning, designing and maintaining.
+			<p>Send your queires to this email address <a href="mailto:joef@anycloud.in">info@anycloud.in</a> </p>
 		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
