--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<h2>Suo Moto</h2>
-		<img src=".\Custstomer.jpg" alt="Customer Right" style="width:304px;height:228px;">
+		<img src="Custstomer.jpg" alt="Customer Right" style="width:304px;height:228px;">
 			<ul>
         		<li><a href="mailto:joef@anycloud.in">email</a></li>
         		<li><a href="https://github.com/anycloudin">github.com/anycloudin</a></li>
