New site made of HTML&CSS

--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>AnyCloud design, deploy and maintenance</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, </h1>
-				<p>Support related to <em>Azure & AWS</em></p> infrastructure planning, designing and maintaining.
-			<p>Send your queires to this email address <a href="mailto:joef@anycloud.in">info@anycloud.in</a> </p>
-		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<h2>Suo Moto</h2>
-		<img src="Customer.jpg" alt="Customer Right" style="width:354px;height:228px;">
+<head>
+	<title>AnyCloud</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<div id="container">
+		<div id="header">
+			<h1> Welcome to AnyCloud site.<h1>
+
+		</div>
+		
+
+		<div id="content">
+			<div id="nav">
+			<h3>Site Links</h3>
 			<ul>
-        		<li><a href="mailto:joef@anycloud.in">email</a></li>
-        		<li><a href="https://github.com/anycloudin">github.com/anycloudin</a></li>
+				<li><a class="selected" href="">Home</a></li>
+				<li>About</li>
+				<li>Contact</li>
 			</ul>
-		</footer>
-	</body>
+			</div>
+			<div id="main">
+				<h2>Good day</h2>
+			<p>Welcome to one stop site to get your cloud deployment and manangement needs taken care.</p>
+			<p>We are team of cloud enthusiasts willing to impart our knowledge to new cloud users.</p>
+			<p>We also have team to design and deploy websites static/dynamic in the best possible ways.</p>
+			<p>Send your queires to this email address <a href="mailto:joef@anycloud.in">info@anycloud.in</a> </p>
+			<h2>Suo Moto</h2>
+			<img src="Customer.jpg" alt="Customer is always Right" style="width:354px;height:228px;">
+			</div>
+		<div id="footer">
+		Copyright &copy; 2017 Joe Frixon.
+		</div>
+
+
+	</div>
+
+</body>
 </html>
